--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.1",
     "node-cron": "^3.0.3",
+    "serverless-http": "^3.2.0",
     "simple-node-logger": "^21.8.12"
   },
   "devDependencies": {
