--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 # MONGODB_URI =  mongodb+srv://nikunj:LhWMkraIQxa5jnEs@cluster0.ulbny4y.mongodb.net/
-MONGODB_URI = mongodb://localhost:27017/paisabook-DB
+# MONGODB_URI = mongodb://localhost:27017/paisabook-DB
+MONGODB_URI = mongodb+srv://CVLCluster1:Ramani%407258@atlascluster.g9ls9b9.mongodb.net/paisabook-DB
 PORT = 3010
 JWT_SECRET=Paisabook_secret_key
 JWT_EXPIRES_IN=7d
