--- a/.env
+++ b/.env
@@ -1,6 +1,8 @@
-# MONGODB_URI =  mongodb+srv://nikunj:LhWMkraIQxa5jnEs@cluster0.ulbny4y.mongodb.net/
+# MONGODB_URI =  mongodb+srv://nikunjramani567:VJbYUwImZEJQGlH4@cluster0.uzgpqvo.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 # MONGODB_URI = mongodb://localhost:27017/paisabook-DB
-MONGODB_URI = mongodb+srv://CVLCluster1:Ramani%407258@atlascluster.g9ls9b9.mongodb.net/paisabook-DB
+# userName: nikunjramani567
+# password: VJbYUwImZEJQGlH4
+MONGODB_URI = mongodb://localhost:27017/paisabook-DB
 PORT = 3010
 JWT_SECRET=Paisabook_secret_key
 JWT_EXPIRES_IN=7d
