--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 # MONGODB_URI = mongodb://localhost:27017/paisabook-DB
 # userName: nikunjramani567
 # password: VJbYUwImZEJQGlH4
-MONGODB_URI = mongodb://localhost:27017/paisabook-DB
+MONGODB_URI = mongodb+srv://nikunjramani567:VJbYUwImZEJQGlH4@cluster0.uzgpqvo.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 PORT = 3010
 JWT_SECRET=Paisabook_secret_key
 JWT_EXPIRES_IN=7d
