--- a/.env
+++ b/.env
@@ -4,5 +4,5 @@
 # password: VJbYUwImZEJQGlH4
 MONGODB_URI = mongodb+srv://nikunjramani567:VJbYUwImZEJQGlH4@cluster0.uzgpqvo.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 PORT = 3010
-JWT_SECRET=Paisabook_secret_key
+JWT_SECRET= 
 JWT_EXPIRES_IN=7d
