--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.1",
+    "multer": "^1.4.5-lts.2",
     "node-cron": "^3.0.3",
     "serverless-http": "^3.2.0",
     "simple-node-logger": "^21.8.12"
