image upload in cloudinary

--- a/.env
+++ b/.env
@@ -6,3 +6,7 @@ MONGODB_URI = mongodb+srv://nikunjramani567:VJbYUwImZEJQGlH4@cluster0.uzgpqvo.mo
 PORT = 3010
 JWT_SECRET= 
 JWT_EXPIRES_IN=7d
+CLOUDINARY_API_KEY=892894842565393
+CLOUDINARY_API_SECRET=eEcY-ET0CiUe49ofLiT3jOHvUWU
+CLOUDINARY_CLOUD_NAME=djezvsxio
+
