--- a/.env
+++ b/.env
@@ -2,9 +2,9 @@
 # MONGODB_URI = mongodb://localhost:27017/paisabook-DB
 # userName: nikunjramani567
 # password: VJbYUwImZEJQGlH4
-MONGODB_URI = mongodb+srv://nikunjramani567:VJbYUwImZEJQGlH4@cluster0.uzgpqvo.mongodb.net/Paisabook?retryWrites=true&w=majority&appName=Cluster0
-PORT = 3010
-JWT_SECRET= 
+MONGODB_URI=mongodb+srv://nikunjramani567:VJbYUwImZEJQGlH4@cluster0.uzgpqvo.mongodb.net/Paisabook?retryWrites=true&w=majority&appName=Cluster0
+PORT=3010
+JWT_SECRET=Fintrixo-jwt-secret
 JWT_EXPIRES_IN=7d
 CLOUDINARY_API_KEY=892894842565393
 CLOUDINARY_API_SECRET=eEcY-ET0CiUe49ofLiT3jOHvUWU
