--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "build": "mkdir -p dist && cp -r server dist/",
     "start": "node dist/server/app.js",
     "dev": "nodemon server/app.js",
-    "vercel-build": "npm run build"
+    "vercel-build": "npm run build",
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
@@ -22,6 +23,9 @@
     "simple-node-logger": "^21.8.12"
   },
   "devDependencies": {
-    "nodemon": "^3.1.9"
+    "jest": "^30.0.0",
+    "mongodb-memory-server": "^10.1.4",
+    "nodemon": "^3.1.9",
+    "supertest": "^7.1.1"
   }
 }
